[gd_scene load_steps=15 format=3 uid="uid://c6ic2w21tv33y"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_nqbsp"]
[ext_resource type="Texture2D" uid="uid://kbxxf6g407ck" path="res://images/5top.png" id="2_cu53h"]
[ext_resource type="Texture2D" uid="uid://dns2khvk6pqmw" path="res://pc_images/day.jpg" id="2_dsgoh"]
[ext_resource type="Texture2D" uid="uid://vsxai5lk46b8" path="res://pc_images/night.jpg" id="2_g8pso"]
[ext_resource type="SpriteFrames" uid="uid://df7ijmtp3y2vg" path="res://clocks/clocks.tres" id="2_kyemp"]
[ext_resource type="Texture2D" uid="uid://dgm5j2o6fueed" path="res://images/fridge_top.png" id="3_oyk8c"]
[ext_resource type="Texture2D" uid="uid://b26b8vnkglwik" path="res://pc_images/morning.jpg" id="4_l4kpb"]
[ext_resource type="Texture2D" uid="uid://pqplagad618q" path="res://pc_images/pc.jpg" id="5_ad716"]
[ext_resource type="Texture2D" uid="uid://2ye8rlayqbco" path="res://images/bed.png" id="6_c0t1h"]
[ext_resource type="AudioStream" uid="uid://f6ch0o5rhs2q" path="res://audio/zhirik.mp3" id="6_sppxf"]
[ext_resource type="Texture2D" uid="uid://cauvdtg6stnow" path="res://images/med/med.png" id="11_c5vuh"]
[ext_resource type="StyleBox" uid="uid://beh1w8kdfjjog" path="res://images/med/transparent.tres" id="12_0nqd2"]
[ext_resource type="Texture2D" uid="uid://ckbw2gkbefliw" path="res://images/med/med_but_def.png" id="12_4oe04"]
[ext_resource type="Texture2D" uid="uid://b1ao3vnpu8ovw" path="res://images/med/med_but_act.png" id="13_1r3g8"]

[node name="Game" type="Node2D"]
script = ExtResource("1_nqbsp")

[node name="Day" type="Sprite2D" parent="."]
position = Vector2(325, 629)
scale = Vector2(1.15, 1.15)
texture = ExtResource("2_dsgoh")

[node name="Night" type="Sprite2D" parent="."]
position = Vector2(325, 629)
scale = Vector2(1.15, 1.081)
texture = ExtResource("2_g8pso")

[node name="Morning" type="Sprite2D" parent="."]
position = Vector2(325, 629)
scale = Vector2(1.15, 1.15)
texture = ExtResource("4_l4kpb")

[node name="StatsHBox" type="HBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 672.0
offset_right = 108.0
offset_bottom = 803.0
grow_vertical = 0
scale = Vector2(1.21535, 1.21469)

[node name="Info0LabelBox" type="VBoxContainer" parent="StatsHBox"]
layout_mode = 2

[node name="Hp" type="Label" parent="StatsHBox/Info0LabelBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Здоровье
"

[node name="Money" type="Label" parent="StatsHBox/Info0LabelBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Рубли
"

[node name="Hunger" type="Label" parent="StatsHBox/Info0LabelBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Голод
"

[node name="Thirst" type="Label" parent="StatsHBox/Info0LabelBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Жажда"

[node name="Sleep" type="Label" parent="StatsHBox/Info0LabelBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Сон"

[node name="Info1LabelBox" type="VBoxContainer" parent="StatsHBox"]
layout_mode = 2

[node name="Hp" type="Label" parent="StatsHBox/Info1LabelBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0"

[node name="Money" type="Label" parent="StatsHBox/Info1LabelBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0"

[node name="Hunger" type="Label" parent="StatsHBox/Info1LabelBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0
"

[node name="Thirst" type="Label" parent="StatsHBox/Info1LabelBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0"

[node name="Sleep" type="Label" parent="StatsHBox/Info1LabelBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "0"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 456.0
offset_top = 664.0
offset_right = 574.0
offset_bottom = 800.0
scale = Vector2(1.276, 1.2)

[node name="5Top" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(65.8308, 15.8334)
scale = Vector2(0.136, 0.2)
texture = ExtResource("2_cu53h")

[node name="FridgeTop" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(65.8307, 50.8334)
scale = Vector2(0.294334, 0.202097)
texture = ExtResource("3_oyk8c")

[node name="Pc" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(66.6144, 85.8334)
scale = Vector2(0.808, 0.187)
texture = ExtResource("5_ad716")

[node name="Bed" type="Sprite2D" parent="VBoxContainer"]
position = Vector2(65.8307, 120)
scale = Vector2(0.166, 0.064)
texture = ExtResource("6_c0t1h")

[node name="ButtonsVBox" type="VBoxContainer" parent="."]
offset_left = 456.0
offset_top = 664.0
offset_right = 588.0
offset_bottom = 800.0
scale = Vector2(1.27626, 1.19995)

[node name="5" type="Button" parent="ButtonsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "
"

[node name="Fridge" type="Button" parent="ButtonsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Холодильник"

[node name="Work" type="Button" parent="ButtonsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Компьютер"

[node name="Sleep" type="Button" parent="ButtonsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Спать"

[node name="Time" type="Label" parent="."]
offset_left = 424.0
offset_top = 24.0
offset_right = 479.0
offset_bottom = 47.0
scale = Vector2(1.56829, 1.64659)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 20
text = "День 0"

[node name="Back" type="Button" parent="."]
custom_minimum_size = Vector2(0, 39)
offset_left = 24.0
offset_top = 24.0
offset_right = 208.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 25
text = "Сохранить и выйти"

[node name="ClockAnim" type="AnimatedSprite2D" parent="."]
position = Vector2(576, 104)
sprite_frames = ExtResource("2_kyemp")
speed_scale = 0.2

[node name="audio" type="AudioStreamPlayer2D" parent="."]
position = Vector2(324, 0)
stream = ExtResource("6_sppxf")

[node name="Med" type="Sprite2D" parent="."]
position = Vector2(974, 418)
scale = Vector2(0.6, 0.6)
texture = ExtResource("11_c5vuh")

[node name="Label" type="Label" parent="Med"]
self_modulate = Color(1, 1, 1, 0.6)
offset_left = -248.333
offset_top = 296.667
offset_right = 302.667
offset_bottom = 332.667
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 26
text = "Нажмите на пустое место, чтобы закрыть"

[node name="Scroll" type="ScrollContainer" parent="Med"]
offset_left = -242.0
offset_top = -43.0
offset_right = 388.0
offset_bottom = 282.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MedV" type="VBoxContainer" parent="Med/Scroll"]
custom_minimum_size = Vector2(622, 325)
layout_mode = 2
theme_override_constants/separation = 16

[node name="PanelContainer" type="PanelContainer" parent="Med/Scroll/MedV"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_styles/panel = ExtResource("12_0nqd2")

[node name="MedBut" type="TextureButton" parent="."]
self_modulate = Color(1, 1, 1, 0.466667)
offset_left = 625.0
offset_top = 327.0
offset_right = 671.0
offset_bottom = 407.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("12_4oe04")
texture_pressed = ExtResource("13_1r3g8")
texture_hover = ExtResource("13_1r3g8")
texture_disabled = ExtResource("13_1r3g8")
texture_focused = ExtResource("13_1r3g8")
stretch_mode = 0

[connection signal="pressed" from="ButtonsVBox/5" to="." method="_on_5_pressed"]
[connection signal="pressed" from="ButtonsVBox/Fridge" to="." method="_on_fridge_pressed"]
[connection signal="pressed" from="ButtonsVBox/Work" to="." method="_on_work_pressed"]
[connection signal="pressed" from="ButtonsVBox/Sleep" to="." method="_on_sleep_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MedBut" to="." method="_on_med_but_pressed"]
